# Game-Of-Life

./: Cargo.toml
assets/: notes.txt
assets/light/: sc.sh
assets/tmp/: %  100
src/: main.rs
src/default/: arg_proc.rs  default.rs  mod.rs  palette.rs  textures.rs
src/game/: backup.bk  button.rs  cell.rs  double_buf.rs  field.rs  game_of_life.rs  grid.rs  lastdown.rs  mod.rs  palette.rs  renderer.rs  ret.rs  toolbar.rs
src/hello_screen/: hello_screen.rs  mod.rs
