[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# rand="*"

[dependencies]


[dependencies.sdl2]
sdl2 = "0.37"
features = ["image", "ttf"]
# default-features = { version = "0.9.8" }
#dependencies.features = { version = "0.9.8" }

